# dreamseed_monorepo

./: .continueignore  .coverage  .cursorignore  .env.docker  .env.example  .env.ide-sync  .env.phase1.example  .env.python  .gitignore  .gitignore.new  .npmrc  .pre-commit-config.yaml  .rgignore  .sourcery.yaml  6line-summary.sh  BATCH_CONVERSION_GUIDE.md  BOOKMARKS.md  CLEANUP_OVERENGINEERING.sh  CODEOWNERS  CONTRIBUTING.md  DEBT.md  DEPLOYMENT_GUIDE_attempt_view_lock.md  Dockerfile  Dockerfile.quarto-runner  FINAL-OPERATION-GUIDE.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.md  MAINTENANCE_GUIDE.md  MOCK_API_MIGRATION_PLAN.md  MODEL-MIGRATION-GUIDE.md  MONOREPO_RESTRUCTURE_PLAN.md  Makefile  NEXT_STEPS.md  OPERATION-GUIDE.md  OVERENGINEERING_SUMMARY.md  PERFORMANCE-OPTIMIZATION.md  POST_RENAME.md  PROJECT_STRUCTURE.md  PR_TOKEN_BLACKLIST.md  (+280 more)
.changeset/: config.json
.continue/: USAGE_GUIDE.md  config.yaml
.cursor/: integrations.json
.github/: CODEOWNERS  PROJECTS_BOARD_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SYSTEM_CHECK.md  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.history/: .env_20251111024507.example  .env_20251111024536  .env_20251112205623  .gitignore_20251113233957  .gitignore_20251113234013  .gitignore_20251113234034  .gitignore_20251113234102  .gitignore_20251113234124  .gitignore_20251113234150  .gitignore_20251113234214  .gitignore_20251113234223  .gitignore_20251113234232  .gitignore_20251113234239  .ignore_20251107043316  ADMIN_QUESTIONS_SETUP_20251115010439.md  ADMIN_QUESTIONS_SETUP_20251115011045.md  ADMIN_QUESTIONS_SETUP_20251115011046.md  ADMIN_QUESTIONS_SETUP_20251115011117.md  ADMIN_QUESTIONS_SETUP_20251115011119.md  ADMIN_QUESTIONS_SETUP_20251115011125.md  ADMIN_QUESTIONS_SETUP_20251115011127.md  ADMIN_QUESTIONS_SETUP_20251116105643.md  ADMIN_QUESTIONS_SETUP_20251116105646.md  ADMIN_QUESTIONS_SETUP_20251116105648.md  ADMIN_QUESTIONS_SETUP_20251116105650.md  ADMIN_QUESTIONS_SETUP_20251116105652.md  ADMIN_QUESTIONS_SETUP_20251116105654.md  ADMIN_QUESTIONS_SETUP_20251116105656.md  ADMIN_QUESTIONS_SETUP_20251116105658.md  ADMIN_QUESTIONS_SETUP_20251116105700.md  docker-compose.base_20251111204059.yml  docker-compose.base_20251111204121.yml  dreamseed_monorepo_20251106231849.code-workspace  dreamseed_monorepo_20251107024400.code-workspace
.precommit-env/: pyvenv.cfg
R/: README.md  irt_calibrate_mpc.R
adaptive_engine/: README.md  config.py  main.py  requirements.txt
admin/: gpt-access.html  index.html
admin_front/: .env.development  .env.production  .env.production.example  DASHBOARD_INTEGRATION_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_SUMMARY.md  PRODUCTION_SETUP.md  README.md  deploy.sh  next.config.js  next.config.mjs  package-lock.json  package.json  quick-deploy.sh  tailwind.config.js  tsconfig.tsbuildinfo
alembic/: env.py
alert-threader/: .gitlab-ci.yml  CHANGELOG-Guard-Window-Enhanced.md  CHANGELOG-Resilience-System.md  README-Auto-Retry-QoS.md  README-Auto-Rollback.md  README-CI-CD-Complete.md  README-CI-CD.md  README-Guard-Window-Enhanced.md  (+40 more)
shared/etl/: ETL_QUICKSTART.md  README.md  __init__.py  mysql_to_postgres_hooks.py  pyproject.toml
shared/etl/dreamseed_shared_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shared/etl/shared_etl/: __init__.py  mysql_to_postgres_hooks.py  normalize_adapter.py  types.py
shared/etl/tests/: test_schemas.py
(+3457 files in other folders)
