[project]
name = "dreamseed-shared-etl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "SQLAlchemy>=2.0.30",
    "pymysql>=1.1.1",
    "lxml>=5.0.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
